@@ -24,6 +24,7 @@ v2.6.25
 * Compile fixes for NETKEY without KLIPS [Ajay.V.Sarraju]
 * Fix tcpdump operation on KLIPS/ipsecX interfaces [David]
 * Report NETDEV_TX_BUSY when klips is overloaded with requests [David]
+* Fix usage of KLIPS_IP_SELECT_IDENT to prevent kernel trace/warnings [David]
 
 v2.6.24
 * Give clear warning about missing defaultroute [Tuomo]
